# OpenCVproj

./: .gitignore  CMakeLists.txt  README.md
include/: guo_hall.hpp  my_function.hpp  remove_corner_pixels.hpp  skeletonization.hpp  zhang_suen.hpp
sources/: CMakeLists.txt  guo_hall.cpp  main.cpp  my_function.cpp  remove_corner_pixels.cpp  skelet.cpp  skeletonization.cpp  zhang_suen.cpp
